--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -6,7 +6,7 @@
     text-align: center;
     font-size: 72px;
     font-family: 'Inter', sans-serif;
-    font-weight: bold;
+    font-weight: 900;
     line-height: 76px;
     position: relative;
     z-index: 1;
@@ -21,6 +21,6 @@
         font-size: 32px;
         line-height: 35px;
         width: 288px;
-        padding-top: 33px;
+        padding-top: 10.3%;
     }    
 }
