--- a/blocks/footer/__list-el/footer__list-el.css
+++ b/blocks/footer/__list-el/footer__list-el.css
@@ -1,12 +1,11 @@
 .footer__list-el {
-    display: inline;
     padding: 0;
     margin: 0 18px 0 0;
+    list-style-type: none;
 }
 
 @media screen and (max-width: 767px) {
     .footer__list-el {
-        display: block;
         margin: 32px 0 0;
     }
 }
