--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,7 +1,8 @@
 .footer {
     max-width: 1184px;
     margin: 92px auto 24px;
-    position: relative;
+    display: flex;
+    justify-content: space-between;
 }
 
 @media screen and (max-width: 1279px) {
@@ -22,5 +23,6 @@
     .footer {
         margin-top: 64px;
         margin-left: 16px;
+        flex-direction: column;
     }
 }
