--- a/blocks/intro/__title/intro__title.css
+++ b/blocks/intro/__title/intro__title.css
@@ -2,7 +2,7 @@
     margin: 92px 0 0;
     font-family: 'Inter', sans-serif;
     font-size: 54px;
-    font-weight: bold;
+    font-weight: 900;
     line-height: 58px;
     color: #fff;
 }
