--- a/blocks/lead/__title/lead__title.css
+++ b/blocks/lead/__title/lead__title.css
@@ -3,7 +3,7 @@
     font-family: 'Inter', sans-serif;
     font-size: 96px;
     line-height: 100px;
-    font-weight: bold;
+    font-weight: 900;
     color: #fff;
     max-width: 720px;
     text-align: center;
