--- a/blocks/cover/__background/cover__background.css
+++ b/blocks/cover/__background/cover__background.css
@@ -2,9 +2,9 @@
     background-image: url(../../../images/cover-trains.jpg);
     background-size: cover;
     width: 100%;
-    height: 62.5vw;
+    min-height: 62.5vw;
     max-width: 1184px;
-    max-height: 740px;
+    background-position: center;
     position: relative;
 }
 
