--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,7 +3,7 @@
     color: #fff;
     text-decoration: none;
     font-size: 16px;
-    font-family: 'Inter';
+    font-family: 'Inter', sans-serif;
     font-weight: normal;
     line-height: 18px;
 }
