--- a/blocks/lead/__image/lead__image.css
+++ b/blocks/lead/__image/lead__image.css
@@ -1,8 +1,7 @@
 .lead__image {
     width:  100%;
-    height: 62.5vw;
+    min-height: 200%;
     max-width: 984px;
-    max-height: 615px;
     display: block;
     margin: 64px 0 0;
 }
