--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -5,7 +5,7 @@
     font-weight: normal;
     line-height: 22px;
     color: #fff;
-    margin: 32px auto 0;
+    margin: 32px 0 0;
     text-align: center;
     position: relative;
     z-index: 1;
