--- a/blocks/cover/__title/cover__title.css
+++ b/blocks/cover/__title/cover__title.css
@@ -1,6 +1,5 @@
 .cover__title {
-    margin: 0 auto 0;
-    padding-top: 19.5%;
+    margin: 0;
     max-width: 560px;
     color: #fff;
     text-align: center;
@@ -17,6 +16,5 @@
         font-size: 32px;
         line-height: 35px;
         width: 288px;
-        padding-top: 10.3%;
     }    
 }
