--- a/blocks/cover/cover.css
+++ b/blocks/cover/cover.css
@@ -1,5 +1,16 @@
 .cover {
     margin: 92px auto 0;
     max-width: 1184px;
-    min-height: 200px;
+}
+
+@media screen and (max-width: 1023px) {
+    .cover {
+        margin-top: 90px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover {
+        margin-top: 66px;
+    }
 }
