--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -6,6 +6,7 @@
     color: #fff;
     letter-spacing: 1.5px;
     margin: 8px 0 0;
+    text-transform: uppercase;
 }
 
 @media screen and (max-width:1023px) {
