--- a/blocks/place/__image/place__image.css
+++ b/blocks/place/__image/place__image.css
@@ -1,8 +1,7 @@
 .place__image {
     width: 100%;
     object-fit: cover;
-    grid-row: 2/3;
-    grid-column: 1/2;
+    grid-area: img;
 }
 
 @media screen  and (max-width: 1024px) {
