--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,7 +1,7 @@
 .place__paragraph {
     font-size: 18px;
     font-family: 'Inter', sans-serif;
-    font-weight: normal;
+    font-weight: 400;
     line-height: 29px;
     color: #fff;
     margin: 0;
