--- a/blocks/place/place.css
+++ b/blocks/place/place.css
@@ -3,6 +3,9 @@
     display: grid;
     grid-template-columns: fit-content(460px) fit-content(484px);
     grid-template-rows: fit-content(152px) fit-content(460px);
+    grid-template-areas: 
+    "title url"
+    "img text";
     row-gap: 48px;
     column-gap: 40px;
     margin-top: 80px;
@@ -18,6 +21,7 @@
 @media screen and (max-width: 1023px) {
     .place {
         column-gap: 28px;
+        grid-template-columns: minmax(340px, min-content) fit-content(484px);
     }
     
 }
@@ -26,6 +30,11 @@
     .place {
         grid-template-columns: fit-content(767px);
         grid-template-rows: min-content min-content min-content min-content;
+        grid-template-areas: 
+        "title"
+        "url"
+        "img"
+        "text";
         row-gap: 32px;
         margin-top: 50px;
     }
