--- a/blocks/cover/__link/cover__link.css
+++ b/blocks/cover/__link/cover__link.css
@@ -1,3 +1,46 @@
 .cover__link {
     text-decoration: none;
+    background-image: url(../../../images/cover-trains.jpg);
+    background-size: cover;    
+    background-position: center;
+    display: flex;
+    position: relative;
+    width: 100%;
+    min-height: 740px;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.cover__link::before {
+    background-color: #2a2c2f;
+    opacity: 0.3;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    content: '';
+}
+
+.cover__link:hover::before {
+    opacity: 0.8;
+}
+
+@media screen and (max-width: 1279px) {
+    .cover__link {
+        min-height: 640px;
+    }
+}
+
+@media screen and (max-width: 1023px) {
+    .cover__link {
+        min-height: 480px;
+    }
+}
+
+@media screen and (max-width: 767px) {
+    .cover__link {
+        min-height: 200px;
+    }
 }
